[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/Collision.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/Obstacle.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/stone-hit.wav" type="AudioStream" id=4]
[ext_resource path="res://objects/hp.tscn" type="PackedScene" id=5]
[ext_resource path="res://objects/Weapon.tscn" type="PackedScene" id=6]
[ext_resource path="res://components/Resources.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
custom_solver_bias = 1.0

[node name="Obstacle" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Collision" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -25.0

[node name="Weapon" parent="." instance=ExtResource( 6 )]
visible = false

[node name="hp" parent="." instance=ExtResource( 5 )]

[node name="Resources" parent="." instance=ExtResource( 7 )]

[connection signal="body_entered" from="Collision" to="." method="_on_Collision_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
